# diddykongracing

./: .gitignore  CMakeLists.txt  README.md  aspMain.toml  dkr.recomp.toml  dkr.us.syms.toml  run_dkr.bat
RecompiledFuncs/: funcs.h  funcs_0.c  funcs_1.c  funcs_10.c  funcs_11.c  funcs_12.c  funcs_13.c  funcs_14.c  funcs_15.c  funcs_16.c  funcs_17.c  funcs_18.c  funcs_19.c  funcs_2.c  funcs_20.c  funcs_21.c  funcs_22.c  funcs_23.c  funcs_24.c  funcs_25.c  funcs_26.c  funcs_27.c  funcs_28.c  funcs_29.c  funcs_3.c  funcs_30.c  funcs_31.c  funcs_32.c  funcs_33.c  funcs_34.c  funcs_35.c  funcs_36.c  funcs_4.c  funcs_5.c  funcs_6.c  funcs_7.c  funcs_8.c  funcs_9.c  lookup.cpp  recomp_overlays.inl
include/: f3ddkr.h  menu_gui.h
rsp/: aspMain.cpp
src/: audio_diag.cpp  f3ddkr.cpp  main.cpp  menu_gui.cpp  register_overlays.cpp  rt64_render_context.cpp  stubs.cpp
tools/: generate_symbols.js
tools/m64p_debug/: README.md  dkr_state.json  m64p_debug.js  m64p_dump.js  m64p_state.js  read_dump.js
